# mplapack

./: configure.ac
include/: mplapack_utils_mpfr.h
mpfrc++/: mpcomplex.h  mpreal.h
mplapack/test/compare/_Float128/: Makefile.am
mplapack/test/compare/_Float64x/: Makefile.am
mplapack/test/compare/dd/: Makefile.am
mplapack/test/compare/double/: Makefile.am
mplapack/test/compare/gmp/: Makefile.am
mplapack/test/compare/mpfr/: Makefile.am
mplapack/test/compare/qd/: Makefile.am
